<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>assignment_two</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="eskil.digernes@nmbu.no">eskil</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Other dependencies --> 
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>  <!-- Added dependency -->
  <exec_depend>tf2</exec_depend> <!-- Added dependency -->
  <exec_depend>tf2_py</exec_depend> <!-- Added dependency -->
  <exec_depend>tf2_geometry_msgs</exec_depend> <!-- Added dependency -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
